--- a/halo2_middleware/Cargo.toml
+++ b/halo2_middleware/Cargo.toml
@@ -31,6 +31,10 @@ serde = { version = "1", optional = true, features = ["derive"] }
 serde_derive = { version = "1", optional = true}
 rayon = "1.8"
 
+# GPU Icicle integration
+icicle = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v0.1.0", optional = true }
+rustacuda = { version = "0.1", optional = true }
+
 [dev-dependencies]
 ark-std = { version = "0.3" }
 proptest = "1"
@@ -42,3 +46,6 @@ getrandom = { version = "0.2", features = ["js"] }
 
 [lib]
 bench = false
+
+[features]
+icicle_gpu = ["icicle", "rustacuda"]
